--- a/packages/tiny-topo-flow/package.json
+++ b/packages/tiny-topo-flow/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "tiny-topo-flow",
+  "name": "@qftjs/tiny-topo-flow",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "tiny-topo-flow",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.mjs",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vite build",
+    "dev": "vite dev"
   },
   "author": "qi.futao",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@qftjs/tiny-topo-core": "workspace:^1.0.0"
+  }
 }
