--- a/packages/tiny-topo-flow/package.json
+++ b/packages/tiny-topo-flow/package.json
@@ -15,6 +15,10 @@
   "author": "qi.futao",
   "license": "ISC",
   "dependencies": {
-    "@qftjs/tiny-topo-core": "workspace:^1.0.0"
+    "@qftjs/tiny-topo-core": "workspace:^1.0.0",
+    "zrender": "^5.4.4"
+  },
+  "devDependencies": {
+    "tslib": "^2.6.2"
   }
 }
