--- a/packages/tiny-editor-core/package.json
+++ b/packages/tiny-editor-core/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "vite build",
-    "dev": "vite dev"
+    "dev": "vite build --watch"
   },
   "author": "qi.futao",
   "license": "ISC"
