--- a/packages/tiny-editor-core/package.json
+++ b/packages/tiny-editor-core/package.json
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "build": "vite build",
-    "dev": "vite build --watch"
+    "dev": "vite build --watch",
+    "lint": "eslint src/**/*.ts"
   },
   "author": "qi.futao",
   "license": "ISC"
