--- a/playground/editor/package.json
+++ b/playground/editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiny-editor",
+  "name": "editor",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@qftjs/tiny-editor-flow": "workspace:^1.0.0",
+    "@qftjs/tiny-editor-engine": "workspace:^1.0.0",
     "@qftjs/tiny-editor-core": "workspace:^1.0.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
