--- a/playground/editor/package.json
+++ b/playground/editor/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@qftjs/tiny-editor-engine": "workspace:^1.0.0",
-    "@qftjs/tiny-editor-core": "workspace:^1.0.0",
+    "element-plus": "^2.6.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
