--- a/playground/editor/package.json
+++ b/playground/editor/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@qftjs/tiny-editor-engine": "workspace:^1.0.0",
+    "default-passive-events": "^2.0.0",
     "element-plus": "^2.6.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
@@ -30,6 +31,7 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "less": "^4.2.0",
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
